src/objects/AndrewProvidersXO__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modality__c</fullName>
        <label>Modality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Long__c</fullName>
        <label>Provider (Long)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Short__c</fullName>
        <label>Provider (Short)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Title__c</fullName>
        <label>Provider (Title)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AndrewProvidersXO</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Provider_Long__c</columns>
        <columns>Provider_Short__c</columns>
        <columns>Client__c</columns>
        <columns>Modality__c</columns>
        <columns>Provider_Title__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AndrewProvidersXO Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AndrewProvidersXOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>